@@ -2,27 +2,36 @@ name = Dancer-Template-Xslate
 author = franck cuny <franck@lumberjaph.net>
 license = Perl_5
 copyright_holder = franck cuny
-copyright_year = 2010
-version = 0.01
+copyright_year = 2011
+version = 0.010_001
 
 [@Filter]
 bundle = @Basic
+remove = MakeMaker
+[ModuleBuild]
 
-[MetaConfig]
-[MetaJSON]
-[PkgVersion]
-[PodSyntaxTests]
-[PodCoverageTests]
-[NoTabsTests]
-[EOLTests]
+[@TestingMania]
+
+[AutoMetaResources]
+repository.github = user:franckcuny
+bugtracker.github = user:franckcuny
 
 [MetaResources]
 repository = git://github.com/franckcuny/dancer-template-xslate.git
 bugtracker = http://rt.cpan.org/Public/Dist/Display.html?Name=Dancer::Template::Xslate
 homepage = http://search.cpan.org/perldoc?Dancer::Template::Xslate
 
+[Test::PodSpelling]
+stopwords = franck
+stopwords = cuny
+
 [PodWeaver]
-[AutoPrereq]
+[AutoPrereqs]
 [ReadmeFromPod]
-[CheckChangeLog]
-[UploadToCPAN]
+[CheckChangesHasContent]
+[Clean]
+[ExtraTests]
+[MetaJSON]
+[MinimumPerl]
+[NextRelease]
+[OurPkgVersion]
