@@ -1,7 +1,0 @@
-use strict;
-use warnings;
-use Test::More tests => 1;
-
-BEGIN {
-    use_ok( 'Dancer::Template::Xslate' ) || print "Bail out!";
-}
