@@ -1,20 +1,12 @@
 use strict;
 use warnings;
-use Test::More import => ["!pass"];
+use Test::More tests => 2;
+use File::Spec;
 
-use Dancer ':syntax';
-use Dancer::Test;
-
-plan tests => 3;
-
-setting views   => 't';
-setting template => 'xslate';
-
-ok(
-    get '/' => sub {
-        template 'index', { loop => [1..2] };
-    }
-);
-
-route_exists [ GET => '/' ];
-response_content_like( [ GET => '/' ], qr/1<br \/>\n2/ );
+{
+    use Dancer::Test;
+    use lib File::Spec->catdir(qw(t lib));
+    use TestApp;
+    route_exists [ GET => '/' ];
+    response_content_like( [ GET => '/' ], qr/1<br \/>\n2/ );
+}
